--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@ VETKA2
         <p style="text-transform:uppercase">Все буквы будут в верхнем регистре</p>
         <p style="text-transform:lowercase">ВСЕ БУКВЫ БУДУТ В НИЖНЕМ РЕГИСТРЕ</p>
     </body>
+ </body>
+ </body>
 </html>
